tests/baselines/reference/genericArrayAssignmentCompatErrors.errors.txt
==== tests/cases/compiler/genericArrayAssignmentCompatErrors.ts (2 errors) ====
    var myCars=new Array(); 
    var myCars2 = new [];
                      ~~
!!! genericArrayAssignmentCompatErrors.ts(2,19): error TS2083: Cannot use 'new' with an expression whose type lacks a signature.
    var myCars3 = new Array({});
    var myCars4: Array; // error
                 ~~~~~
!!! genericArrayAssignmentCompatErrors.ts(4,14): error TS2090: Generic type 'Array<T>' requires 1 type argument(s).
    var myCars5: Array<any>[];
     
    myCars = myCars2;
    myCars = myCars3;
    myCars = myCars4;
    myCars = myCars5;
     
    myCars2 = myCars;
    myCars2 = myCars3;
    myCars2 = myCars4;
    myCars2 = myCars5;
     
    myCars3 = myCars;
    myCars3 = myCars2;
    myCars3 = myCars4;
    myCars3 = myCars5;   
    